# spotify-ubercorn

./: .gitignore  main.py  pyproject.toml
app/: network.py  schema.py  screen.py  spotify.py
